initial q modifications
initial q modifications