@@ -63,7 +63,7 @@ public class BannerComponentUpdaterImpl implements ComponentUpdater {
             try {
                 assetKitHelper.updateComponentOnPage(assetKitPage, config.resource_type(), config.banner_asset_path_property(), asset.getPath());
             } catch (PersistenceException | RepositoryException e) {
-                log.error(String.format("Failed to update banner component on page [ %s ]", assetKitPage.getPath()), e);
+                log.error("Failed to update banner component on page [ %s ]".formatted(assetKitPage.getPath()), e);
             }
         });
     }
